--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
   "name": "fit-rect",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Fits one rectangle into another",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "Marcin Ignac",
     "email": "marcin.ignac@gmail.com",
     "url": "https://github.com/vorg"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "release-it": "^14.11.7",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
+  },
   "scripts": {
-    "test": "node test.js"
+    "test": "mocha --require ts-node/register ./test/**.test.ts",
+    "prepare": "tsc",
+    "release": "release-it"
   },
   "keywords": [
-    "geometry"
+    "geometry",
+    "fit-rect"
   ],
   "repository": {
     "type": "git",
@@ -24,5 +35,8 @@
   "homepage": "https://github.com/vorg/fit-rect",
   "bugs": {
     "url": "https://github.com/vorg/fit-rect/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
